-- Updated eval.sh to new version